# marble_mapping

./: .gitignore  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
cfg/: MarbleMapping.cfg  icpParams.yaml
include/: MarbleMapping.h  TrackingMarbleMapping.h
launch/: diff_alignment.launch  marble_mapping.launch  marble_mapping_base.launch  marble_mapping_nodelet.launch  marble_tracking_client.launch  marble_tracking_server.launch  merge_diffs.launch  publish_markers.launch  traversability_points.launch  traversability_points_sim.launch
msg/: OctomapArray.msg  OctomapNeighbors.msg
scripts/: map_color.sh  sync.sh
src/: MarbleMapping.cpp  TrackingMarbleMapping.cpp  compare_octomaps.cpp  marble_mapping_node.cpp  marble_mapping_nodelet.cpp  marble_tracking_mapping_node.cpp
